# lpm

./: .gitignore  .todo  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.docker/: Dockerfile.playground
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lpm.yml  main.yml  sdk.yml
assets/: pkgs.json
common/: Cargo.toml
common/src/: lib.rs  lpm_version.rs  meta.rs  pkg.rs  system.rs  version.rs
core/: Cargo.toml
core/src/: delete.rs  deletion.rs  extract.rs  extraction.rs  installation.rs  lib.rs  pkg.rs  update.rs  validate.rs  validation.rs
db/: Cargo.toml
db/src/: framework.rs  lib.rs  migrations.rs  pkg.rs
db/src/sql-builder/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
ehandle/: Cargo.toml
ehandle/src/: db.rs  io.rs  lib.rs  lpm.rs  package.rs  pkg.rs
extractor/: Cargo.toml
extractor/src/: init.rs  lib.rs  pkg.rs
hash/: Cargo.toml
hash/src/: lib.rs  md5.rs  sha256.rs  sha512.rs
io/: Cargo.toml
io/src/: file.rs  lib.rs
json/: Cargo.toml
json/src/: iterator.rs  json.rs  json_value.rs  lib.rs
libs/hash/: Cargo.toml
libs/hash/src/: md5.rs  sha256.rs  sha512.rs
libs/json/: TODO
libs/json/src/: deserializer.rs  iterator.rs  json.rs  json_value.rs  lib.rs
libs/logger/: Cargo.toml
libs/logger/src/: lib.rs
libs/rekuest/: Cargo.toml
libs/rekuest/src/: lib.rs
libs/sql-builder/: Cargo.toml
libs/sql-builder/src/: delete.rs  lib.rs  select.rs
libs/term/: Cargo.toml
libs/term/src/: lib.rs  logger.rs  progress_bar.rs
libs/untar/: Cargo.toml
libs/untar/src/: archive.rs  entry.rs  error.rs  ffi.rs  header.rs  lib.rs
lpm/cli_parser/: Cargo.toml  TODO
lpm/cli_parser/src/: check_path.rs  delete.rs  install.rs  kind.rs  lib.rs  module.rs  repository.rs  update.rs
lpm/common/: Cargo.toml
lpm/common/src/: config.rs  lib.rs  lpm_version.rs  meta.rs  pkg.rs  system.rs  version.rs
lpm/core/: Cargo.toml
lpm/core/src/: check_path.rs  ctx.rs  delete.rs  extract.rs  install.rs  lib.rs  module.rs  plugin.rs  repository.rs  stage1.rs  update.rs  validate.rs
lpm/db/: Cargo.toml  build.rs
lpm/db/src/: index.rs  lib.rs  migrations.rs  module.rs  pkg.rs  repository.rs
lpm/ehandle/: Cargo.toml
lpm/ehandle/src/: db.rs  io.rs  lib.rs  lpm.rs  module.rs  pkg.rs  plugin.rs  repository.rs
lpm/main/: Cargo.toml  build.rs
lpm/main/src/: cli.rs  main.rs
main/: Cargo.toml  build.rs
main/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs  meta.rs  pkg.rs  system.rs  version.rs
sdk/: Cargo.toml  build.rs
sdk/src/: high_level.rs  lib.rs  log.rs
tar/: Cargo.toml
tar/src/: archive.rs  entry.rs  entry_type.rs  error.rs  header.rs  lib.rs
term/: Cargo.toml
term/src/: controller.rs  lib.rs  logger.rs  progress_bar.rs
utils/src/: ehandle.rs  file_io.rs  lib.rs
