[workspace]
resolver = "2"

members = [
	"lpm/common",
	"lpm/core",
	"lpm/db",
	"lpm/ehandle",
	"lpm/main",
	"libs/hash",
	"libs/json",
	"libs/logger",
	"libs/sql-builder",
	"libs/untar",
	"libs/term",
]

exclude = [
	"sdk"
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
