[workspace]
resolver = "2"

members = [
	"lpm/cli_parser",
	"lpm/common",
	"lpm/core",
	"lpm/db",
	"lpm/ehandle",
	"lpm/main",
	"libs/hash",
	"libs/json",
	"libs/logger",
	"libs/rekuest",
	"libs/sql-builder",
	"libs/untar",
	"libs/term",
]

exclude = [
	"sdk"
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
debug = 0
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
