[package]
name = "core"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9"
tar = { version = "0.4", default-features = false }
xz2 = "0.1"
min-sqlite3-sys = "1.3"
parser = { path = "../parser" }
hash = { path = "../hash" }
ehandle = { path = "../ehandle" }
common = { path = "../common" }
db = { path = "../db" }
