[package]
name = "core"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
ar = "0.9"
tar = { version = "0.4", default-features = false }
xz2 = "0.1"
min-sqlite3-sys = "1.3"
hash = { path = "../hash" }
ehandle = { path = "../ehandle" }
common = { path = "../common" }
db = { path = "../db" }
term = { path = "../term" }
