[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9"
tar = { version = "0.4", default-features = false }
xz2 = "0.1"
parser = { path = "../parser" }
lpm_io = { path = "../io", package = "io" }
