[package]
name = "lpm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
ehandle = { path = "../ehandle" }
db = { path = "../db" }
common = { path = "../common" }
term = { path = "../term" }
min-sqlite3-sys = "1.3"
