[package]
name = "lpm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
core = { path = "../core" }
ehandle = { path = "../ehandle" }
db = { path = "../db" }
common = { path = "../common" }
term = { path = "../term" }
min-sqlite3-sys = "1.3"

[build-dependencies]
common = { path = "../common" }
term = { path = "../term" }
