[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
logger = { path = "../libs/logger" }
