[package]
name = "core"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
min-sqlite3-sys = "1.3"
common = { path = "../common" }
db = { path = "../db" }
ehandle = { path = "../ehandle" }
hash = { path = "../../libs/hash" }
untar = { path = "../../libs/untar" }
term = { path = "../../libs/term" }
tiny-lz4-decoder-sys = "1.0"
