[package]
name = "core"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }
cli_parser = { path = "../cli_parser" }
db = { path = "../db" }
ehandle = { path = "../ehandle" }
hash = { path = "../../libs/hash" }
logger = { path = "../../libs/logger" }
min-sqlite3-sys = "1.4"
rekuest = { path = "../../libs/rekuest" }
untar = { path = "../../libs/untar" }
tiny-lz4-decoder-sys = "1.0"
