[package]
name = "lpm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
min-sqlite3-sys = "1.3"
common = { path = "../common" }
core = { path = "../core" }
db = { path = "../db" }
ehandle = { path = "../ehandle" }
term = { path = "../../libs/term" }

[build-dependencies]
common = { path = "../common" }
term = { path = "../../libs/term" }
