[package]
name = "lpm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cli_parser = { path = "../cli_parser" }
common = { path = "../common" }
core = { path = "../core" }
db = { path = "../db" }
ehandle = { path = "../ehandle" }
logger = { path = "../../libs/logger" }
min-sqlite3-sys = "1.3"

[build-dependencies]
common = { path = "../common" }
